<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.LyricsActivity">

    <LinearLayout
        style="@style/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <ImageView
            android:id="@+id/currentlyPlaying"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_queue_music_black" />

        <ImageView
            android:id="@+id/listOfSongsView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_list_black" />

        <ImageView
            android:id="@+id/lyricsView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/lyrics_black" />

        <ImageView
            android:id="@+id/infoView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_info_white" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/ayreon_the_human_equation" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/bandName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_name" />

            <TextView
                style="@style/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/infoAboutSong" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>